After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704410 - vaapisink does not work unless display= is specified
vaapisink does not work unless display= is specified
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
0.5.5
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-07-17 16:59 UTC by Paul Neumann
Modified: 2013-07-18 17:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Paul Neumann 2013-07-17 16:59:17 UTC
When using gst-vaapi, I have to explicitely specify the display type like this:

works:
$ gst-launch-1.0 filesrc location="file.mp4" ! qtdemux ! vaapidecode ! vaapisink display=1 # since I am on X11 2 works as well here

does not work:
$ GST_DEBUG=1 gst-launch-1.0 filesrc location="file.mp4" ! qtdemux ! vaapidecode ! vaapisink
0:00:00.015209430  1316       0x9f1590 ERROR            vaapidecode ../../../gst/vaapi/gstvaapidecode.c:807:gst_vaapidecode_ensure_allowed_caps: failed to retrieve VA display
Setting pipeline to PAUSED ...
ERROR: Pipeline doesn't want to pause.
Setting pipeline to NULL ...
Freeing pipeline ...

One thing to note is that on Wayland, the autodetection works fine.
Comment 1 Gwenole Beauchesne 2013-07-18 06:47:46 UTC
Should be fixed in git master. I will respin a release, though 0.5.5 was not announced. :)
Comment 2 Paul Neumann 2013-07-18 17:12:20 UTC
Yep, I can confirm that this is fixed.
Comment 3 Gwenole Beauchesne 2013-07-18 17:29:08 UTC
Thanks, closing.